# PYfetch

./: .gitignore  PYfetch.py  PYfetch_args.py  README.md  pyneofetch.py  pyproject.toml  requirements.txt  test_pyneofetch.py
.github/workflows/: ci.yml  release.yml  tag.yml
