[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["PYfetch", "PYfetch_args"]

[project]
name = "pyfetch"
version = "0.1.0"
description = "A simple system information fetcher for Python."
requires-python = ">=3.10"
dependencies = ["psutil"]

[project.scripts]
pyfetch = "PYfetch:main"

readme = "README.md"
